--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ShadyNashaat.github.io/Seats-react",
+  "homepage": "https://ShadyNashaat.github.io/seats",
   "name": "erp",
   "version": "0.1.0",
   "private": true,
